fix bug thêm account

--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen-edit/bai-kiem-tra-truc-tuyen-edit.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen-edit/bai-kiem-tra-truc-tuyen-edit.component.html
@@ -24,10 +24,23 @@
         <div class="card text-left mb-5">
           <div class="card-header"><p class="text-header" [innerHTML]="'<strong>Câu '+(i+1)+': </strong> '+item.TieuDe"></p></div>
           <div class="card-body">
-            <p class="card-text text-header" [innerHTML]="'<strong>A. </strong> '+item.CauA"></p>
-            <p class="card-text text-header" [innerHTML]="'<strong>B. </strong> '+item.CauB"></p>
-            <p class="card-text text-header" [innerHTML]="'<strong>C. </strong> '+item.CauC"></p>
-            <p class="card-text text-header" [innerHTML]="'<strong>D. </strong> '+item.CauD"></p>
+            <mat-radio-group (change)="radioChecked(item.Id, $event)">
+              <mat-radio-button value="1">
+                <p class="card-text text-header" [innerHTML]="item.CauA"></p>
+              </mat-radio-button>
+              <hr/>
+              <mat-radio-button value="2">
+                <p class="card-text text-header" [innerHTML]="item.CauB"></p>
+              </mat-radio-button>
+              <hr/>
+              <mat-radio-button value="3">
+                <p class="card-text text-header" [innerHTML]="item.CauC"></p>
+              </mat-radio-button>
+              <hr/>
+              <mat-radio-button value="4">
+                <p class="card-text text-header" [innerHTML]="item.CauD"></p>
+              </mat-radio-button>
+            </mat-radio-group>
           </div>
         </div>
       </ng-container>
