--- a/Angular_Client/src/app/pages/components/__quan_tri/quan-li-tai-khoan/quan-li-tai-khoan-create/quan-li-tai-khoan-create.component.html
+++ b/Angular_Client/src/app/pages/components/__quan_tri/quan-li-tai-khoan/quan-li-tai-khoan-create/quan-li-tai-khoan-create.component.html
@@ -5,7 +5,7 @@
       <h3 class="card-label">Thêm mới tài khoản</h3>
     </div>
     <div class="card-toolbar">
-      <button type="button" class="btn btn-light btn-elevate mr-2" routerLink="../">Trở lại</button>
+      <button type="button" class="btn btn-light btn-elevate mr-2" (click)="back()">Trở lại</button>
       <button type="button" class="btn btn-primary" (click)="create()">Thêm mới</button>
     </div>
   </div>
