fix bug quản lí tài khoản

--- a/Angular_Client/src/app/pages/components/__quan_tri/quan-li-tai-khoan/quan-li-tai-khoan-create/quan-li-tai-khoan-create.component.html
+++ b/Angular_Client/src/app/pages/components/__quan_tri/quan-li-tai-khoan/quan-li-tai-khoan-create/quan-li-tai-khoan-create.component.html
@@ -29,8 +29,8 @@
                 alt="Ảnh đại diện"
                 width="150"
                 height="150"
+                style="object-fit: cover;cursor: pointer;"
                 (click)="selectFile()"
-                style="cursor: pointer"
               />
             </div>
             <div class="form-group row">
