fix bug bài kiểm tra và thêm ảnh cho account

--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-cau-hinh/bai-kiem-tra-cau-hinh-edit/bai-kiem-tra-cau-hinh-edit.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-cau-hinh/bai-kiem-tra-cau-hinh-edit/bai-kiem-tra-cau-hinh-edit.component.html
@@ -109,7 +109,7 @@
               Thông tin chính xác
             </div>
             <div class="invalid-feedback" *ngIf="ValidateFormGroupEvent('thoiGianLamBai', formThongTin, 1)">
-              Vui lòng nhập nhập thời lượng làm bài kiểm tra
+              Vui lòng nhập thời lượng làm bài kiểm tra
             </div>
           </div>
           <div class="col-lg-3">
