--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra.component.html
@@ -161,6 +161,7 @@
                 matTooltip="Chỉnh sửa"
                 matTooltipPosition="after"
                 class="btn btn-icon btn-light btn-hover-primary btn-sm mr-3"
+                (click)="edit(item.Id)"
               >
                 <span
                   [inlineSVG]="'./assets/media/svg/icons/Communication/Write.svg'"
