--- a/Angular_Client/src/app/_metronic/partials/layout/extras/offcanvas/user-offcanvas/user-offcanvas.component.html
+++ b/Angular_Client/src/app/_metronic/partials/layout/extras/offcanvas/user-offcanvas/user-offcanvas.component.html
@@ -17,7 +17,7 @@
       <!--begin::Header-->
       <div class="d-flex align-items-center mt-5">
         <div class="symbol symbol-100 mr-5">
-          <div class="symbol-label" style="background-image: url('./assets/media/users/300_21.jpg')"></div>
+            <img  class="symbol-label" [src]="env+_user.pic" />   
           <i class="symbol-badge bg-success"></i>
         </div>
         <div class="d-flex flex-column">
