--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra-add/success/success.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra-add/success/success.component.html
@@ -16,10 +16,10 @@
     </div>
     <div class="form-group row">
       <div class="col-lg-6 text-right">
-        <button type="button" class="btn btn-primary" routerLink="../">Trở về trang chủ</button>
+        <button type="button" class="btn btn-primary" (click)="handleBack()">Trở về trang chủ</button>
       </div>
       <div class="col-lg-6 text-left">
-        <button type="button" class="btn btn-" routerLink="../them-moi">Thêm bài kiểm tra khác</button>
+        <button type="button" class="btn btn-" (click)="handleCreate()">Thêm bài kiểm tra khác</button>
       </div>
     </div>
   </div>
