--- a/Angular_Client/src/app/pages/components/__quan_tri/quan-li-tai-khoan/quan-li-tai-khoan-create/quan-li-tai-khoan-create.component.html
+++ b/Angular_Client/src/app/pages/components/__quan_tri/quan-li-tai-khoan/quan-li-tai-khoan-create/quan-li-tai-khoan-create.component.html
@@ -126,7 +126,7 @@
               <div class="col-lg-6">
                 <label class="form-label">Số điện thoại</label>
                 <input
-                  type="text"
+                  type="number"
                   class="form-control form-control-lg"
                   placeholder="0123456789"
                   formControlName="sodienthoai"
